appId: com.marta.ofmcroni
---
- launchApp:
    clearState: true
    permissions:
      all: allow
- assertVisible: "FIND MY DRINK"
- assertVisible:
    text: ".*MANCHESTER.*"
- tapOn: "NEGRONI"
- tapOn: "I'M AN EXPLORER"
- tapOn: "FIND MY DRINK"
- tapOn:
    text: "Turn on"
    optional: true
- extendedWaitUntil:
    visible:
      text: ".*nearby.*"
    timeout: 45000
- tapOn: "directions"
- extendedWaitUntil:
    visible:
      text: ".*walking.*"
    timeout: 45000
- assertVisible:
    text: ".*back.*"
- assertVisible: "Open in Maps"
